# 1-HACKATHON-0-

./: .dockerignore  .gitignore  Dashboard.md  Dockerfile  GMAIL_MCP_SETUP.md  README.md  WATCHER_ARCHITECTURE.md  demo_start.bat  docker-compose.prod.yml  docker-compose.yml  plan_crm_update_2026-01-19.md  pyproject.toml  run_automation.bat  run_automation.sh  start_watchers.bat  start_watchers.sh  workflow.txt
.obsidian/: graph.json  workspace.json
4_Approved/: Gmail_2026-03-07_171410_New Client Project Inquiry.md  task_2026-03-07_164109_LinkedIn_2026-03-07_164108_AI Automation Trends 2026.md
Approved/: Gmail_2026-03-07_171410_New Developer Alert for Person.md
Done/: Facebook_Summary_2026-03-08_012247.md  email_draft_client_inquiry_2026-02-17.md  facebook_summary.json  linkedin_draft_ai_automation_2026-02-17.md  plan_client_inquiry_response_2026-02-17.md  plan_linkedin_ai_automation_trends_2026-02-17.md  plan_urgent_invoice_followup_2026-01-19.md  task_2026-02-17_002141_LinkedIn_2026-02-17_002140_AI Automation Trends 2026.md  task_2026-02-17_002215_Gmail_2026-02-17_002214_New Client Project Inquiry.md  urgent_invoice_followup.md
Inbox/: Facebook_2026-03-07_235330_AI Automation Success Story.md  Facebook_2026-03-08_000600_AI Automation Success Story.md  Facebook_2026-03-08_001346_AI Automation Success Story.md  Facebook_2026-03-08_001923_AI Automation Success Story.md  Facebook_2026-03-08_012034_AI Automation Success Story.md  Facebook_2026-03-08_012237_AI Automation Success Story.md
Knowledge_Base/: Knowledge_Base_Template.md
Logs/: email_audit.json  (+2 more)
(+226 files in other folders)
