[project]
name = "ai-employee-vault"
version = "0.2.0"
description = "Silver Tier AI Employee with Multi-Source Integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0"
]
